...

  static final _mockProducts = [
    Product(
      imageUrl: '$networkImageUrl/nintendo.png',
      price: 10027,
      slashedAmount: '12,053',
      productName: 'Nintendo Gaming Console',
      rating: 4.0,
      reviews: 67,
      categoryName: 'Gaming',
      stock: 6,
    ),
    Product(
...
