...
        Row(
          mainAxisAlignment: isWeb
              ? MainAxisAlignment.start
              : MainAxisAlignment.spaceBetween,
          children: [
            CustomButton(
              key: const Key('cart_add_button'),
              text: isAlreadyInCart ? 'Already in Cart' : 'Add to Cart',
              fontSize: 16,
              fontWeight: FontWeight.w600,
              borderRadius: 16,
              height: 50,
              textColor: isAlreadyInCart
...
