...
                            width: 42,
                            decoration: BoxDecoration(
                              borderRadius: BorderRadius.circular(66.76),
                              color: AppColors.tableHeader,
                            ),
                            child: IconButton(
                              key: const Key('cart_button'),
                              icon: AppAssets.icons.cart.svg(height: 24),
                              onPressed: () async {
                                showLoadingDialog(context);
                                await Future.delayed(
                                  const Duration(seconds: 1),
                                );
...
